--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +10,39 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #4cbbb9;
+  font-size: 1.2rem;
+}
+p {
+  font-size: 2rem;
+  transition: all 2s ease-in;
+}
+div {
+  transition: background-color 0.3s ease-in-out,
+}
+
+h1 {
+  transition: all 0.3s ease-in-out,
+}
+
+h2 {
+  transition: all 0.3s ease-in-out,
+}
+
+h3 {
+  transition: all 0.3s ease-in-out,
+}
+
+a {
+  transition: all 0.3s ease-in-out;
+  font-family: 'Roboto';
+}
+
+img {
+  transition: all 0.3s ease-in-out,
+}
+
+i {
+  transition: color 0.3s ease-in-out;
 }
 
 code {
