novo app Meus projetos

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Courier New", Courier, monospace;
 }
@@ -306,9 +310,9 @@ task_bar {
   height: 15px !important;
 }
 
-._scrollbar::-webkit-scrollbar-track {
-  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-}
+/* ._scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+} */
 
 ._scrollbar::-webkit-scrollbar-thumb {
   background-color: #303030;
@@ -382,6 +386,7 @@ task_bar {
   font-size: 2.6rem;
   font-weight: bold;
   margin-top: 10px;
+  transition: font-size 0.3s;
 }
 
 .__window_fullscren .__projects h1 {
@@ -394,6 +399,7 @@ task_bar {
   width: 100%;
   margin-top: 20px;
   font-weight: bold;
+  transition: font-size 0.3s;
 }
 
 .__window_fullscren .__projects h2 {
@@ -405,19 +411,11 @@ task_bar {
   /* padding: 20px; */
   text-align: justify;
   font-size: 1.1rem;
+  transition: font-size 0.3s;
 }
 
 .__window_fullscren .__projects p {
   font-size: 1.3rem !important;
-}
-
-.__projects a:hover {
-  transition: color 0.3s;
-  color: rgb(129, 63, 252);
-}
-
-.__window_fullscren .__projects a {
-  font-size: 2.1rem;
 }
 
 .__projects ul {
@@ -428,12 +426,7 @@ task_bar {
   margin-top: 50px;
 }
 
-.__window_fullscren .__projects li {
-  margin-bottom: 50px;
-}
-
-/* ----------------------- SITES  */
-.__projects_sites_list li {
+.__projects li {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -445,39 +438,76 @@ task_bar {
   margin-top: 30px;
 }
 
-.__projects_sites_list a {
+.__window_fullscren .__projects li {
+  margin-bottom: 50px;
+}
+
+.__projects li:last-of-type {
+  border: none;
+}
+
+.__projects a {
   /* width: 100%; */
   color: whitesmoke;
   font-size: 1.8rem;
   font-weight: bolder;
 }
 
-.__projects_sites_list img {
-  width: 50%;
-  margin: 10px;
+.__projects a:hover {
+  transition: color 0.3s;
+  color: rgb(129, 63, 252);
 }
 
-.__window_fullscren .__projects_sites_list img {
+.__window_fullscren .__projects a {
+  font-size: 2.1rem;
+}
+
+.__window_fullscren .__projects img {
   margin-top: 30px;
 }
 
-.__projects_sites_list span {
+.__projects span {
   text-align: justify;
   font-size: 1rem;
   margin-bottom: 20px;
 }
 
-.__window_fullscren .__projects_sites_list span {
+.__window_fullscren .__projects span {
   margin-top: 30px;
   margin-bottom: 30px;
   font-size: 1.2rem;
 }
 
+.__projects img {
+  width: 90%;
+  object-fit: contain;
+  margin: 20px;
+}
+
+.__window_fullscren .__projects img {
+  width: 80%;
+  object-fit: contain;
+  margin: 20px;
+}
+
 /* ------------------------- CAROUSEL  */
-.__projects_carousel {
+.__carousel {
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
   margin-top: 20px;
   margin-bottom: 25px;
+}
+
+.__carousel img {
+  width: 50%;
+  margin: 10px;
+  object-fit: contain;
+}
+
+.__tweet {
+  width: 100%;
+}
+.__window_fullscren .__tweet {
+  width: 50%;
 }
