--- a/src/style/main.css
+++ b/src/style/main.css
@@ -3,7 +3,9 @@ html {
 }
 
 body {
-  font-family: "Courier New", Courier, monospace;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  /* font-family: "Courier New", Courier, monospace; */
 }
 
 body a {
@@ -180,7 +182,7 @@ svg {
 }
 
 .__window.focused .__window_content {
-  background-color: #212121da;
+  background-color: #212121e7;
 }
 
 .__window.focused.__window_fullscren .__window_content {
@@ -366,6 +368,8 @@ task_bar {
 
 .__about_me h2 {
   font-size: 1.5rem;
+  font-weight: 500;
+  margin-top: 10px;
   border-bottom: solid 1px #7a7a7a;
 }
 
@@ -385,6 +389,7 @@ task_bar {
   text-align: justify;
   text-indent: 2em;
   font-size: 1.2rem;
+  font-weight: 300;
 }
 
 /* -------------- PROJECTS  */
@@ -420,7 +425,7 @@ task_bar {
   border-bottom: solid 1px #7a7a7a;
   width: 100%;
   margin-top: 20px;
-  font-weight: bold;
+  font-weight: 500;
   transition: font-size 0.3s;
 }
 
@@ -434,6 +439,7 @@ task_bar {
   text-align: justify;
   font-size: 1.1rem;
   transition: font-size 0.3s;
+  font-weight: 300;
 }
 
 .__window_fullscren .__projects p {
@@ -472,7 +478,8 @@ task_bar {
   /* width: 100%; */
   color: whitesmoke;
   font-size: 1.8rem;
-  font-weight: bolder;
+  font-weight: 400;
+  text-align: center;
 }
 
 .__projects a:hover {
