--- a/src/style/main.css
+++ b/src/style/main.css
@@ -5,7 +5,13 @@ html {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  /* font-family: "Courier New", Courier, monospace; */
+  /* IMPEDE DE SELECIONAR O TEXTO  */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body a {
@@ -158,8 +164,8 @@ svg {
   width: 80%;
   padding-left: 8px;
   color: white;
-  font-weight: bold;
-  font-size: 1.1rem;
+  font-weight: 500;
+  font-size: 1rem;
   cursor: default;
 }
 
@@ -532,11 +538,23 @@ task_bar {
   width: 50%;
   margin: 10px;
   object-fit: contain;
+  max-height: 500px;
 }
 
 .__tweet {
+  max-height: 300px;
+  overflow-y: scroll;
+  width: 75%;
+  /* background-color: #ffffff; */
+  background-color: #121212;
+  margin: 30px 0;
+}
+.__window_fullscren .__tweet {
+  width: 70%;
+}
+/* .__tweet {
   width: 100%;
 }
 .__window_fullscren .__tweet {
   width: 50%;
-}
+} */
