--- a/src/style/main.css
+++ b/src/style/main.css
@@ -997,6 +997,19 @@ task_bar {
   height: 100%;
 }
 
+.__under_development {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  bottom: 50%;
+  right: 10%;
+  font-size: 8rem;
+  font-weight: 500;
+  color: white;
+  opacity: 0.2;
+  z-index: 10000;
+}
+
 /* ------------------------ ANIMATIONS  */
 @keyframes slideInFromLeft {
   0% {
