--- a/src/style/main.css
+++ b/src/style/main.css
@@ -151,12 +151,12 @@ svg {
   display: flex;
   flex-direction: column;
   position: absolute;
-  width: 50%;
+  width: 60%;
   height: 500px;
   max-height: 500px;
   z-index: 10;
-  top: 20%;
-  left: 25%;
+  top: 10%;
+  left: 20%;
   transition: transform 0.1s, width 0.1s, height 0.1s;
   transform-origin: bottom left;
   /* overflow: hidden; */
@@ -1068,15 +1068,92 @@ task_bar {
 
 .__under_development {
   position: absolute;
-  display: flex;
+  display: none;
   align-items: center;
   bottom: 50%;
   right: 10%;
-  font-size: 8rem;
+  font-size: 3rem;
   font-weight: 500;
   color: white;
   opacity: 0.2;
   z-index: 0;
+}
+
+/* ---------------------------- REPONSIVIDADE DESKTOP  */
+@media screen and (max-width: 1000px) {
+  /* WINDOW  */
+  .__window_content > div {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .__window_fullscren .__window_content > div {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .__window_content h1 {
+    font-size: 2rem;
+  }
+
+  .__window_fullscren .__window_content h1 {
+    font-size: 3rem;
+  }
+
+  .__window_content h2 {
+    font-size: 1.2rem;
+  }
+
+  .__window_fullscren .__window_content h2 {
+    font-size: 1.6rem;
+  }
+
+  .__window_content p {
+    font-size: 1rem;
+  }
+
+  .__window_fullscren .__window_content p {
+    font-size: 1.2rem !important;
+  }
+
+  .__under_development {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  /* WINDOW  */
+  .__window_content h1 {
+    font-size: 1.7rem;
+  }
+
+  .__window_fullscren .__window_content h1 {
+    font-size: 2.2rem;
+  }
+
+  .__window_content h2 {
+    font-size: 1.1rem;
+  }
+
+  .__window_fullscren .__window_content h2 {
+    font-size: 1.4rem;
+  }
+
+  .__window_content p {
+    font-size: 0.9rem;
+  }
+
+  .__window_fullscren .__window_content p {
+    font-size: 1.1rem !important;
+  }
+
+  .__under_development {
+    display: flex;
+  }
+}
+
+/* -------------------------- MOBILE  */
+@media screen and (max-width: 500px) {
 }
 
 /* ------------------------ ANIMATIONS  */
@@ -1089,26 +1166,6 @@ task_bar {
   }
   100% {
     transform: translateX(0);
-  }
-}
-
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: white;
   }
 }
 
